# pyipxact-de

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
PyXB/accellera/ipxact/: v1685_2014.py
PyXB/accellera/spirit/: v1685_2009.py  v1_0.py  v1_1.py  v1_2.py  v1_4.py  v1_5.py
docs/: 1685‐2022-Annex-F-TGI.md  Makefile  conf.py  index.rst
docs/intro/: release_notes.rst
src/amal/eda/ipxact_de/cli/: __init__.py
src/amal/eda/ipxact_de/tgi/ipxact/v1685_2022/: core.py  miscellaneous.py
src/org/accellera/ipxact/v1685_2014/: abstractor_port_type.py  abstractor_port_wire_type.py  port_type.py
src/org/accellera/ipxact/v1685_2022/: abstractor_port_type.py  abstractor_port_wire_type.py  abstractor_sub_port_type.py  port_type.py  sub_port_type.py
src/org/accellera/ipxact/v1685_2022/tgi/: __init__.py  float_array_type.py  integer_array_type.py  soap_string_array_type.py
src/org/accellera/spirit/v1685_2009/: abstractor_port_wire_type.py  port_declaration_type.py
src/org/accellera/spirit/v1685_2009/tgi/: __init__.py  float_array_type.py  integer_array_type.py  soap_string_array_type.py
src/org/accellera/spirit/v1685_2009/ve/: abstractor_port_wire_type.py  port_declaration_type.py
src/org/accellera/spirit/v1685_2009/ve/ams/: abstractor_port_wire_type.py  port_declaration_type.py
src/org/accellera/spirit/v1_4/: abstractor_port_wire_type.py
src/org/accellera/spirit/v1_4/tgi/: __init__.py  float_array_type.py  integer_array_type.py  non_negative_integer_array_type.py  soap_string_array_type.py
src/org/accellera/spirit/v1_5/: abstractor_port_wire_type.py  port_declaration_type.py
src/org/accellera/spirit/v1_5/tgi/: __init__.py  non_negative_integer_array_type.py
(+19 files in other folders)
