[project]
name = "pyipxact"
version = "0.1.0"
description = "Accellera IP-XACT CLI Tool"
readme = "README.md"
authors = [
    { name = "Amal Khailtash", email = "amal.khailtash@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "xsdata[cli,lxml]",
]

# [tool.setuptools.packages.find]

[project.scripts]
# ipxact_validate = "amal.eda.ipxact.cli:main"
# ipxact_convert = "amal.eda.ipxact.cli:main"
ipxact = "amal.eda.ipxact_cli.__main__:main"

[tool.hatch.build.targets.sdist]
# include = []
exclude = [
    ".ruff_cache/",
    ".uv_cache/",
    "PyXB/",
    "test-*",
]

[tool.ruff]
line-length = 100

[tool.uv.sources]
xsdata = { git = "https://github.com/tefra/xsdata" }

[tool.hatch.build.targets.wheel]
packages = [
    "src/amal",
    "src/org"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "xsdata[cli,lxml,soap]>=24.11",
]
